--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+#  commenting to introduce vulnerability
+# .env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
